tests/baselines/reference/parseImportAttributesError.errors.txt
/index.ts(2,34): error TS1005: ':' expected.
/index.ts(3,34): error TS1005: ':' expected.
/index.ts(3,68): error TS2694: Namespace '"/node_modules/pkg/require"' has no exported member 'ImportInterface'.
/index.ts(5,61): error TS1005: ':' expected.
/index.ts(6,61): error TS1005: ':' expected.
/index.ts(6,95): error TS2694: Namespace '"/node_modules/pkg/require"' has no exported member 'ImportInterface'.


==== /index.ts (6 errors) ====
    export type LocalInterface =
        & import("pkg", { with: {1234, "resolution-mode": "require"} }).RequireInterface
                                     ~
!!! error TS1005: ':' expected.
        & import("pkg", { with: {1234, "resolution-mode": "import"} }).ImportInterface;
                                     ~
!!! error TS1005: ':' expected.
                                                                       ~~~~~~~~~~~~~~~
!!! error TS2694: Namespace '"/node_modules/pkg/require"' has no exported member 'ImportInterface'.
    
    export const a = (null as any as import("pkg", { with: {1234, "resolution-mode": "require"} }).RequireInterface);
                                                                ~
!!! error TS1005: ':' expected.
    export const b = (null as any as import("pkg", { with: {1234, "resolution-mode": "import"} }).ImportInterface);
                                                                ~
!!! error TS1005: ':' expected.
                                                                                                  ~~~~~~~~~~~~~~~
!!! error TS2694: Namespace '"/node_modules/pkg/require"' has no exported member 'ImportInterface'.
    
==== /node_modules/pkg/package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "exports": {
            "import": "./import.js",
            "require": "./require.js"
        }
    }
    
==== /node_modules/pkg/import.d.ts (0 errors) ====
    export interface ImportInterface {}
    
==== /node_modules/pkg/require.d.ts (0 errors) ====
    export interface RequireInterface {}
    